package com.integradorII.backend.model;

public enum EstadoFalla {
    PENDIENTE, EN_PROCESO, RESUELTO
}

