package com.integradorII.backend.model;

public enum Rol {
    JEFE, SUPERVISOR, TECNICO
}

